--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,118 @@ body {
   grid-row: 1 / 3;
 }
 .bodyContainer {
-  background-color: tomato;
 }
+
 .headerContainer {
-  background-color: green;
   grid-column: 2;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.leftSideItems {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  width: 260px;
+  height: 28px;
+  margin-top: 1rem;
+}
+
+.payment {
+  display: flex;
+  align-items: center;
+  width: 99px;
+  height: 28px;
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  color: #1a181e;
+  margin-left: 1rem;
+}
+
+.headerWork {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
+.howItWork {
+  width: 94px;
+  height: 16px;
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  color: #4d4d4d;
+}
+
+.headerSearchBar {
+  display: flex;
+  align-items: center;
+  padding: 9px 16px;
+  gap: 8px;
+  width: 400px;
+  height: 30px;
+  background: #f2f2f2;
+  border-radius: 6px;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.searchBar {
+  width: 218px;
+  height: 22px;
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 22px;
+  color: #808080;
+  border: none;
+  outline: none;
+  background: #f2f2f2;
+}
+
+.searchIcon {
+  cursor: pointer;
+}
+
+.headerEnd {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+  width: 360px;
+  height: 30px;
+  margin-right: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.wrapperEnd {
+  display: flex;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 92px;
+  height: 40px;
+}
+
+.message,
+.polygon {
+  width: 40px;
+  height: 40px;
+  background: #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .sidebarContainer {
