--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,171 @@ body {
 }
 
 .sidebarContainer {
-  background-color: dodgerblue;
   grid-row: 1 / 3;
 }
 .bodyContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  margin: 1rem;
+  background: #fbfbfb;
+}
+.bodyStart {
+  width: 1258px;
+  height: 36px;
+}
+.overviewContainer {
+  display: flex;
+  justify-content: space-between;
+}
+.overviewText {
+  width: 91px;
+  height: 28px;
+}
+
+.overview {
+  margin: 0 auto;
+  width: 91px;
+  height: 28px;
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 28px;
+  color: #1a181e;
+}
+
+.lastMonthContainer {
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  width: 137px;
+  height: 36px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
+.lastMonth {
+  margin: 0;
+  color: #4d4d4d;
+}
+
+.razorPayContainer {
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  gap: 32px;
+  height: 26px;
+}
+
+.razorPay {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 26px;
+  color: #146eb4;
+}
+
+.cashFree {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 26px;
+  color: #4d4d4d;
+}
+.divider {
+  margin-top: 1rem;
+  height: 3px;
+}
+
+.dividerlargeLine {
+  height: 1px;
+  background: #d9d9d9;
+  width: 1258px;
+}
+
+.selectedDivider {
+  width: 85px;
+  height: 3px;
+  background: #146eb4;
+}
+
+.ordersContainer {
+  margin-top: 1rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 20px;
+  height: 118px;
+}
+
+.orderText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 566px;
+  height: 118px;
+  background: #ffffff;
+  padding-left: 1rem;
+  box-shadow: 0px 2px 6px rgba(26, 24, 30, 0.04);
+  border-radius: 8px;
+}
+
+.orders {
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4d4d4d;
+}
+
+.ordersValue {
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38px;
+  color: #1a181e;
+  margin: 0;
+}
+
+.amountText {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 566px;
+  height: 118px;
+  background: #ffffff;
+  padding-left: 1rem;
+  box-shadow: 0px 2px 6px rgba(26, 24, 30, 0.04);
+  border-radius: 8px;
+}
+
+.amountRecieved {
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #4d4d4d;
+}
+
+.amountRecievedValue {
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38px;
+  color: #1a181e;
+  margin: 0;
 }
 
 .headerContainer {
@@ -18,6 +179,7 @@ body {
   display: flex;
   justify-content: space-between;
   border-bottom: 1px solid #d9d9d9;
+  background: #fffefe;
 }
 
 .leftSideItems {
