--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   gap: 32px;
   margin: 1rem;
   background: #fbfbfb;
+  height: 1282px;
 }
 .bodyStart {
   width: 1258px;
@@ -176,9 +177,10 @@ body {
 .bodyEnd {
   display: flex;
   flex-direction: column;
-  height: 1144px;
+  height: 944px;
   padding: 0px;
   gap: 20px;
+  margin-top: -2rem;
 }
 
 .transactionText {
@@ -193,11 +195,13 @@ body {
 .orderTable {
   display: flex;
   flex-direction: column;
-  padding: 12px 12px 24px;
-
+  padding: 0 12px 12px 24px;
+  padding-top: 0;
+  border: 0.25px solid #fff;
   box-shadow: 0px 2px 6px rgba(26, 24, 30, 0.04);
   border-radius: 8px;
-  height: 1096px;
+  height: 826px;
+  margin-top: -2rem;
 }
 
 .searchSort {
@@ -207,6 +211,7 @@ body {
   align-items: center;
   padding: 0px;
   gap: 12px;
+  margin-top: 1rem;
 }
 
 .searchTable {
@@ -271,6 +276,151 @@ body {
   justify-content: center;
 }
 
+table {
+  margin-top: 1rem;
+  font-family: "Galano Grotesque";
+  font-style: normal;
+  border-collapse: collapse;
+  border: 1px solid #f2f2f2;
+}
+th {
+  text-align: left;
+  background: #f2f2f2;
+  border-radius: 4px;
+  height: 40px;
+  padding: 8px 10px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4d4d4d;
+}
+
+.orderDateAmount,
+.transactionAmount {
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+
+td {
+  padding: 8px 10px;
+}
+table tr td:first-child {
+  color: #146eb4;
+}
+tr {
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.paginationContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.paginationWrapper {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  padding: 0px;
+  gap: 24px;
+  width: 610px;
+  height: 32px;
+}
+
+.previous {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 6px 12px 6px 6px;
+  gap: 6px;
+
+  width: 100px;
+  height: 32px;
+
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.previousText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4d4d4d;
+}
+
+.pageNumber {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 8px;
+
+  width: 388px;
+  height: 28px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4d4d4d;
+}
+
+.ten {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 8px;
+  gap: 6px;
+
+  width: 28px;
+  height: 28px;
+  background: #146eb4;
+  border-radius: 4px;
+  font-weight: 500;
+  color: #ffffff;
+}
+
+.pagingBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 8px;
+  gap: 6px;
+  width: 28px;
+  height: 28px;
+}
+
+.next {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 6px;
+  gap: 6px;
+
+  width: 74px;
+  height: 18px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.nextText {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+
+  color: #4d4d4d;
+}
 .headerContainer {
   grid-column: 2;
   display: flex;
@@ -386,6 +536,7 @@ body {
 
 .sidebarContainer {
   background: #1e2640;
+  height: 1235px;
 }
 
 .navBarTop {
@@ -430,6 +581,7 @@ body {
   text-decoration-line: underline;
   color: #ffffff;
   opacity: 0.8;
+  cursor: pointer;
 }
 
 .navBarMain {
@@ -441,6 +593,8 @@ body {
 
 .navBarBody {
   display: flex;
+  align-items: center;
+
   margin: 1rem 1rem 1rem 0;
 }
 
@@ -451,8 +605,19 @@ body {
   font-style: normal;
 }
 
+.navImage {
+  width: 20px;
+  height: 20px;
+}
+.navPayment {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  width: 200px;
+  height: 36px;
+}
+
 .baseNavButton {
-  margin-top: 10rem;
+  margin-top: 28.5rem;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
